--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "shc",
+  "name": "existdb-login",
   "version": "1.0.0",
   "description": "existdb-login",
-  "main": "index.js",
+  "main": "login.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/eXist-db/existdb-login.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Joern Turner",
+  "license": "GNU-LGPL",
   "devDependencies": {
     "brace-expansion": "^1.1.4",
     "del": "^2.2.0",
