--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "modules/",
     "resources",
     ".idea",
-    ".bower.json.ignores",
+    "bower.json.ignores",
     ".gitignore",
     "404.html",
     "build",
